--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/shop
+url=jdbc:mysql://localhost:3306/shop?useSSL=false&serverTimezone=GMT
 username=root
 password=APTX
