--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
 
     </dependencies>
     <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
