--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -21,9 +21,10 @@
         <servlet-name>resister</servlet-name>
         <url-pattern>/resister</url-pattern>
     </servlet-mapping>
+
     <servlet>
         <servlet-name>download</servlet-name>
-        <servlet-class>com.example.shop.web.Download</servlet-class>
+        <servlet-class>com.example.shop.web.Down</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>download</servlet-name>
